<resources>
    <string name="app_name">Medi-App</string>


    <string name="hello">Hello %s,</string>
    <string name="search_for_anything">Search for medicine</string>
    <string name="home_page">Home Page</string>
    <string name="labs">Labs</string>
    <string name="strength">Strength</string>
    <string name="dosage">Dosage</string>
    <string name="could_not_load_data">Could not load data</string>
    <string name="login">Login</string>
    <string name="length_of_password_and_username_must_be_greater_than_5">length of password and username must be greater than 5</string>
    <string name="length_of_password">length of username must be greater than 5</string>
    <string name="length_of_username">length of password must be greater than 5</string>
    <string name="welcome_to_medi_app">Welcome to Medi-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>