<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_background_gradient"
        tools:context=".presentation.ui.transactionhistory.detail.TransactionHistoryDetailFragment">


        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin_start"
            android:layout_marginStart="@dimen/margin_medium"
            android:backgroundTint="@color/colorOnPrimary"
            android:padding="@dimen/_4sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/shareIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin_start"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@+id/back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_btn" />

        <ImageView
            android:id="@+id/downloadIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="@+id/shareIv"
            app:layout_constraintEnd_toStartOf="@id/shareIv"
            app:layout_constraintTop_toTopOf="@+id/shareIv"
            app:tint="@color/colorSolidText" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/shareIv">

            <TextView
                android:id="@+id/diseaseTv"
                style="@style/TextViewSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="Details" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin_start"
            android:layout_marginTop="@dimen/margin_large"
            app:cardCornerRadius="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/medicineTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:fontFamily="@font/hurmeregular"
                    android:textColor="@color/textSecondary"
                    android:textSize="@dimen/large_text"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Aspirin" />


                <ImageView
                    android:id="@+id/dosageIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:src="@drawable/ic_vaccines_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@id/dosageTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/dosageTv" />

                <TextView
                    android:id="@+id/dosageTv"
                    style="@style/TextViewPrimaryBodyNeutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/dosage"
                    android:textSize="@dimen/regular_text"
                    app:layout_constraintStart_toEndOf="@id/dosageIv"
                    app:layout_constraintTop_toBottomOf="@id/medicineTv" />

                <TextView
                    android:id="@+id/dosageAmountTv"
                    style="@style/TextViewPrimaryBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:textSize="@dimen/regular_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/medicineTv" />

                <View
                    android:id="@+id/viewDosage"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@color/grey_white"
                    app:layout_constraintTop_toBottomOf="@id/dosageAmountTv"

                    />


                <ImageView
                    android:id="@+id/strengthIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:src="@drawable/ic_medication_liquid_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@id/strTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/strTv" />

                <TextView
                    android:id="@+id/strTv"
                    style="@style/TextViewPrimaryBodyNeutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/strength"
                    android:textSize="@dimen/regular_text"
                    app:layout_constraintStart_toEndOf="@id/strengthIv"
                    app:layout_constraintTop_toBottomOf="@id/viewDosage" />

                <TextView
                    android:id="@+id/strengthTv"
                    style="@style/TextViewPrimaryBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"

                    android:textSize="@dimen/regular_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewDosage" />

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@color/grey_white"
                    app:layout_constraintTop_toBottomOf="@id/strengthTv" />

                <ImageView
                    android:id="@+id/labsIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:src="@drawable/ic_apartment_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@id/labsTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/labsTv" />

                <TextView
                    android:id="@+id/labsTv"
                    style="@style/TextViewPrimaryBodyNeutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/labs"
                    android:textSize="@dimen/regular_text"
                    app:layout_constraintStart_toEndOf="@id/labsIv"
                    app:layout_constraintTop_toBottomOf="@id/viewStrength" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/labsRv"
                    style="@style/TextViewPrimaryBody"
                    android:layout_width="0dp"
                    tools:listitem="@layout/item_labs"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:lineSpacingExtra="@dimen/margin_small"
                    android:textSize="@dimen/regular_text"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/labsTv"
                    app:layout_constraintTop_toBottomOf="@id/viewStrength"
                    tools:itemCount="3" />




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>